--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@andreasgalster/fsn-meta-tags": "*",
     "@andreasgalster/fsn-places-api": "*",
     "@andreasgalster/fsn-places-autocomplete": "*",
+    "@andreasgalster/fsn-public-messaging": "*",
     "@andreasgalster/fsn-text-swapper": "*",
     "@andreasgalster/fsn-yesno-button": "*",
     "@polymer/iron-media-query": "0.0.3",
@@ -31,14 +32,9 @@
     "@polymer/paper-toolbar": "0.0.3",
     "@polymer/polymer": "^1.2.5-npm-test.2",
     "bootstrap": "^4.0.0-alpha.2",
-    "braintree": "^1.37.1",
-    "braintree-web": "^2.23.0",
-    "cloudinary": "^1.3.0",
-    "cloudinary-core": "^2.0.6",
     "lodash": "^4.6.1",
     "moment": "^2.13.0",
     "prerender-node": "^2.3.0",
-    "sendgrid": "^2.0.0",
     "web-animations-js": "^2.2.1",
     "webcomponents.js": "^0.7.22"
   },
