use correct project number for push messaging

--- a/public/houseme_manifest.json
+++ b/public/houseme_manifest.json
@@ -3,5 +3,5 @@
   "short_name": "houseme",
   "start_url": "/",
   "display": "standalone",
-  "gcm_sender_id": "pushonesignal-1368"
+  "gcm_sender_id": "792572238516"
 }
