--- a/settings.json
+++ b/settings.json
@@ -4,25 +4,20 @@
 		"secret": "b93b1c33d6a2fdab8d20785693982d95"
   },
 	"public": {
-		"analyticsSettings": {
-	  		"Google Analytics" : {"trackingId": "UA-64951752-1"},
-			"Mixpanel"         : {"token":  "f00bd1a9e127eee3064860c0de81b991", "people": true}
-		},
 		"cloudinary": {
-			"cloud_name": "pigments"
+			"cloud_name": "djkegjjwb"
 		}
 	},
 	"prerender": {
-		"token": "shcAJhf1RQNPpqdc7aBA",
-    "host": "www.houseme.space"
+		"token": "shcAJhf1RQNPpqdc7aBA"
 	},
 	"sendgrid": {
 		"api_key": "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"
 	},
 	"cloudinary": {
-		"cloud_name": "pigments",
-		"api_key": "548566117354883",
-		"api_secret": "iqZNun9VbJUQmj1j-F0zH4B5CV8"
+		"cloud_name": "djkegjjwb",
+		"api_key": "164899291251532",
+		"api_secret": "dhEkzagLq7KiCNfCax1-sE7jfuw"
 	},
   "private": {
       "MailChimp": {
@@ -30,8 +25,4 @@
           "listId": "3999338f74"
       }
   },
-  "kadira": {
-    "appId": "XmWMZ8dPc45qMDjRQ",
-    "appSecret": "4f2fb3ed-085e-4a0a-b0fa-83a8afdc2600"
-   }
 }
