--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,4 @@
+//settings file
 {
   "facebook": {
 		"appId": "1487921041533128",
@@ -15,6 +16,11 @@
 		"api_key": "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"
 	},
 	"cloudinary": {
+		"cloud_name": "djkegjjwb",
+		"api_key": "164899291251532",
+		"api_secret": "dhEkzagLq7KiCNfCax1-sE7jfuw"
+	},
+  "cloudinary2": {
 		"cloud_name": "djkegjjwb",
 		"api_key": "164899291251532",
 		"api_secret": "dhEkzagLq7KiCNfCax1-sE7jfuw"
